--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -197,7 +197,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuMat">
                         <thead>
                             <tr>
-                                <th>NO.</th>
+                                <th>ลำดับ</th>
                                 <th>กระดาษทำการจำหน่ายสินค้าสำเร็จรูป</th>
                             </tr>
                         </thead>
@@ -232,7 +232,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuIns">
                         <thead>
                             <tr>
-                                <th>NO.</th>
+                                <th>ลำดับ</th>
                                 <th>กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป</th>
                             </tr>
                         </thead>
@@ -259,7 +259,7 @@
                     <table class="ui small celled table striped selectable" *ngIf="showSubMenuTax">
                         <thead>
                             <tr>
-                                <th>NO.</th>
+                                <th>ลำดับ</th>
                                 <th>กระดาษทำการตรวจสอบการลดหย่อนภาษี</th>
                             </tr>
                         </thead>
@@ -269,7 +269,9 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04/6"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
+                                    <a href="javascript:;" routerLink="/ope04/6">
+                                        กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 -
+                                        02) </a>
                                 </td>
                             </tr>
                             <!-- <tr>
