--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -1,143 +1,149 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
     <h2 class="ui header">สร้างกระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </h2>
 
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+    <div class="ui top attached header segment">
       <span>Criteria</span>
     </div>
 
     <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">ทะเบียนสรรพสามิต</label>
-            <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
+      <form class="ui form"  id="upload-form">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขประจำตัวผู้เสียภาษี</label>
-            <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6">
+          <div class="four wide field ">
+            <select name="exciseId " id="exciseId" class="ui dropdown ai search full-width office" (change)="changeExciseId($event)"
+              [(ngModel)]="form.exciseId">
+              <option value="">กรุณาเลือก</option>
+              <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
+
+            </select>
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.userNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ผู้ประกอบการ </label>
-            <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly="" value="บ. ฮอนด้า มอเตอร์ ประเทศไทย">
+        <!-- row 2 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ผู้ประกอบการ</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">เลขที่วิเคราะห์</label>
-            <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="256000000001">
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.entrepreneur" name="entrepreneur">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">เลขที่วิเคราะห์</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.anlysisNumber" name="anlysisNumber">
           </div>
         </div>
 
-        <div class="inline fields">
-          <div class="eight wide field required">
-            <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
-            <div class="eight wide field">
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+        <!-- row 3 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ประเภท</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.type" name="type">
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">พิกัด</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.coordinates" name="coordinates">
+          </div>
+        </div>
+
+        <!-- row 4 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
+          </div>
+          <div class="four wide field ">
+            <div class="ui calendar full-width" id="dateF">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
+                  [attr.required]="true">
               </div>
             </div>
-            <div class="eight wide field">
-              <label>-</label>
-              <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
-                <i class="add to calendar icon"></i>
+          </div>
+          <div class="three wide field ">
+            <label class="text-right full-width">ถึง</label>
+          </div>
+          <div class="four wide field ">
+            <div class="ui calendar full-width" id="dateT">
+              <div class="ui input left icon">
+                <i class="clock icon"></i>
+                <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
+                  [attr.required]="true">
               </div>
             </div>
           </div>
         </div>
-
-        <div class="inline fields">
-          <div class="eight wide field">
-            <label class="custom-label-w-25">ประเภท </label>
-            <input type="text" class="custom-readonly" placeholder="" readonly="" value="สินค้า">
+        <!-- row 5 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ไฟล์อัปโหลด</label>
           </div>
-          <div class="eight wide field ">
-            <label class="custom-label-w-20">พิกัด</label>
-            <input type="text" class="custom-readonly" placeholder="" readonly="" value="รถยนต์">
+          <div class="four wide field {{loading ? 'loading' : ''}}">
+            <input  class="inputfile" type="file" name="fileName" id="fileName"  (change)="onChangeUpload($event)"  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+            title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
           </div>
-        </div>
+          <div class="three wide field ">
+            <button class="ui mini yellow button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
+          </div>
+          <div class="four wide field ">
 
-      </div>
-    </div>
-
-    <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>อัพโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </span>
-    </div>
-
-    <div class="ui attached segment">
-      <div class="ui form">
-        <div class="inline fields">
-          <div class="eight wide field ">
-            <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
-            <input type="file" />
           </div>
         </div>
-      </div>
-
-      <div class="ui center aligned grid">
-        <div class="four wide column">
-          <button class="ui mini primary button" (click)="uploadData()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="trash outline icon"></i>
-            ลบไฟล์
-          </button>
-        </div>
-      </div>
+        
+        <div class="ui stackable center aligned page grid">                
+            <button class="ui mini yellow button" type="button" (click)="search()"><i class="file outline icon"></i> แสดงกระดาษทำการ</button>
+            <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
+        </div><br>
+      </form>
     </div>
 
     <div class="ui segment">
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-          บ. ฮอนด้า มอเตอร์ ประเทศไทย
+          {{form.entrepreneur}}
           <br> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)
-          <br> เดือน พ.ย. 2559 - ส.ค. 2559
+          <br> เดือน {{form.dateFrom}} - {{form.dateTo}}
         </div>
       </div>
       <br>
-      <div style="overflow-x: scroll">
-        <table class="ui small celled table striped selectable" style="width: 120%">
+      <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
           <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">เดือน</th>
-              <th rowspan="2">รายการ</th>
-              <th colspan="3">ขอลดหย่อนตามแบบ ภส. 05 - 03</th>
-              <th colspan="4">ใบเสร็จเงิน</th>
-              <th rowspan="2">ผลต่าง</th>
-            </tr>
-            <tr style="text-align: center;">
-              <th style="border-left: 1px solid rgba(34,36,38,.1);">ภาษีรวม</th>
-              <th>ปริมาณ</th>
-              <th>ภาษีต่อหน่วย</th>
-              <th>เลขที่ใบเสร็จ</th>
-              <th>ภาษีรวม</th>
-              <th>ปริมาณ</th>
-              <th>ภาษีต่อหน่วย</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="center aligned">ม.ค.59</td>
-              <td>3150-TF0-TO10-M1</td>
-              <td class="right aligned">15000</td>
-              <td class="right aligned">1500 </td>
-              <td class="right aligned">10</td>
-              <td class="center aligned">17-01-2559 </td>
-              <td>&nbsp;</td>
-              <td>&nbsp;</td>
-              <td class="right aligned">1500</td>
-              <td class="right aligned">
-                <span class="ui green horizontal label right aligned" style="float: right;">0</span>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+              <tr>
+                <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+                <th style="text-align: center !important;" rowspan="2">รายการ</th>
+                <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
+                <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
+                <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
+              </tr>
+              <tr>
+                <th style="text-align: center !important;">จำนวนภาษี</th>
+                <th style="text-align: center !important;">ปริมาณ</th>
+                <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+                
+                <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
+                <th style="text-align: center !important;">จำนวนภาษี</th>
+                <th style="text-align: center !important;">ปริมาณ</th>
+                <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+              </tr>
+            </thead>
+            
+      </table>
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
@@ -146,20 +152,10 @@
             บันทึกข้อมูล
           </button>
           <button class="ui mini button" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
+            <i class="arrow left icon"></i>
+            ย้อนกลับ
           </button>
         </div>
-      </div>
-    </div>
-
-    <br>
-    <div class="ui grid center aligned">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-          <i class="arrow left icon"></i>
-          ย้อนกลับ
-        </button>
       </div>
     </div>
   </div>
