--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -93,7 +93,7 @@
 </div>
 
 <div class="ui segment">
-    <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%;">
+    <table id="dataTable" class="ui small celled table striped selectable display nowrap" style="width: 100%;">
         <thead>
             <tr>
                 <th style="text-align: center !important">ลำดับ</th>
@@ -107,4 +107,13 @@
             </tr>
         </thead>       
     </table>
+
+    <div class="ui grid">
+            <div class="sixteen wide center aligned column">
+                <button class="ui mini yellow button" (click)="exportFile()">
+                        <i class="print icon"></i>
+                    ส่งออก</button>
+            </div>
+        </div>
+
 </div>
