--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -193,6 +193,8 @@
                         routerLinkActive="active ">รับกระดาษทำการคัดเลือกราย </a>
                     <a class="item " [routerLink]="[ '/add-external-data/approve-line-user'] " *ngIf="authService.renderByPage('/add-external-data/approve-line-user')"
                         routerLinkActive="active ">รายการที่เลือก </a>
+                    <a class="item " [routerLink]="[ '/add-external-data/summary-report'] " *ngIf="authService.renderByPage('/add-external-data/summary-report')"
+                        routerLinkActive="active ">ตรวจสอบรายการตอบกลับ </a>
 
                 </div>
             </div>
