--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -105,4 +105,10 @@
             </tr>
         </thead>       
     </table>
+
+    <div class="ui grid">
+        <div class="sixteen wide center aligned column">
+            <button class="ui mini yellow button " (click)="exportFile()">ส่งออก</button>
+        </div>
+    </div>
 </div>
