--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2-1/int11-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2-1/int11-2-1.component.html
@@ -14,12 +14,12 @@
         <div class="inline fields">
           <div class="one wide field "></div>
 
-          <div class="three wide field ">
-            <label>สรรพสามิต : </label>
+          <div class="two wide field ">
+            <label>สำนักงานสรรพสามิต : </label>
           </div>
 
-          <div class="one wide required field ">
-            <label>ภาค</label>
+          <div class="two wide required field ">
+            <label>สำนักงานสรรพสามิตภาค</label>
           </div>
 
           <div class="four wide field ">
@@ -30,8 +30,8 @@
             </select>
           </div>
 
-          <div class="one wide required field ">
-            <label>พื้นที่</label>
+          <div class="two wide required field ">
+            <label>สำนักงานสรรพสามิตพื้นที่</label>
           </div>
 
           <div class="four wide field ">
@@ -44,10 +44,10 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field "></div>
+          <div class="three wide field "></div>
 
-          <div class="one wide required field ">
-            <label>สาขา</label>
+          <div class="two wide required field ">
+            <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
           </div>
 
           <div class="four wide field ">
@@ -442,10 +442,10 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field "></div>
+          <div class="three wide field "></div>
 
-          <div class="one wide field ">
-            <label>สถานะ</label>
+          <div class="two wide field ">
+            <label>สถานะการติดตาม</label>
           </div>
 
           <div class="four wide field ">
