--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-2/int11-2.component.html
@@ -40,7 +40,7 @@
       <div class="two wide field "></div>
 
       <div class="two wide field ">
-        <label>สำนักงานสรรพสามิตพื้นสาขา</label>
+        <label>สำนักงานสรรพสามิตพื้นที่สาขา</label>
       </div>
 
       <div class="four wide field ">
@@ -53,7 +53,7 @@
       </div>
 
       <div class="two wide field ">
-        <label>สถานะ</label>
+        <label>สถานะการติดตาม</label>
       </div>
 
       <div class="four wide field ">
@@ -74,7 +74,7 @@
         </button>
         <button class="ui mini button" (click)="clearData()">
           <i class="refresh icon"></i>
-          ล้างผลการค้นหาทั้งหมด
+          ล้างข้อมูล
         </button>
         <button class="ui mini green button" (click)="addData()">
           <i class="add icon"></i>
