--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1-1/int11-1-1.component.html
@@ -408,10 +408,10 @@
         </div>
 
         <div class="inline fields">
-          <div class="four wide field "></div>
+          <div class="three wide field "></div>
 
-          <div class="one wide field ">
-            <label>สถานะ</label>
+          <div class="two wide field ">
+            <label>สถานะการติดตาม</label>
           </div>
 
           <div class="four wide field ">
