--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int11/int11-1/int11-1.component.html
@@ -11,25 +11,20 @@
 
       <input type="hidden" id="searchFlag" name="searchFlag">
       <div class="inline fields">
-        <div class="two wide field "></div>
-        <div class="two wide field ">
-          <!-- <label>โครงการ</label> -->
-        </div>
+          <div class="four wide field">
+              <label class="text-right full-width">ชื่อโครงการ</label>
+          </div>
         <div class="four wide field ">
-          <label>โครงการ</label>
           <input type="text" id="projectName" name="projectName" [(ngModel)]="projectName">
         </div>
 
-        <!-- <div class="two wide field ">
-            <label>สถานะ</label>
-          </div> -->
-
-        <div class="four wide field ">
-          <label>สถานะ</label>
+          <div class="two wide field">
+            <label class="text-right full-width">สถานะการติดตาม</label>
+          </div>
+        <div class="three wide field ">
           <select class="ui search dropdown follow-project-dropdown" id="status" name="status" [(ngModel)]="status">
             <option value="">กรุณาเลือก </option>
             <option *ngFor="let status of statusList; index as i;" value="{{status.value}}">{{status.label}}</option>
-
           </select>
         </div>
       </div>
@@ -42,7 +37,7 @@
         </button>
         <button class="ui mini button" (click)="clearData()">
           <i class="refresh icon"></i>
-          ล้างผลการค้นหาทั้งหมด
+          ล้างข้อมูล
         </button>
         <button class="ui mini green button" (click)="addData()">
           <i class="add icon"></i>
