--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -98,6 +98,7 @@
                 <th style="text-align: center !important">ลำดับ</th>
                 <th style="text-align: center !important">วันที่สั่งจ่าย</th>
                 <th style="text-align: center !important">เช็คเล่มที่</th>
+                <th style="text-align: center !important">ชื่อธนาคาร</th>
                 <th style="text-align: center !important">จำนวนเงินสั่งจ่ายในเช็ค</th>
                 <th style="text-align: center !important">ประเภทงบประมาณ</th>
                 <th style="text-align: center !important">รายการ</th>
