--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -107,7 +107,7 @@
         </div>
         
         <div class="ui stackable center aligned page grid">                
-            <button class="ui mini yellow button" type="button" (click)="search()"><i class="file outline icon"></i> แสดงกระดาษทำการ</button>
+            <button class="ui mini primary button" type="button" (click)="search()"><i class="file outline icon"></i> แสดงกระดาษทำการ</button>
             <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
         </div><br>
       </form>
