--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -3,18 +3,18 @@
   <div class="sixteen wide column">
     <h2 class="ui header">สร้างกระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </h2>
 
-    <div class="ui top attached header segment">
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
       <span>Criteria</span>
     </div>
 
     <div class="ui attached segment {{loading ? 'loading' : ''}}">
-      <form class="ui form"  id="upload-form">
+      <form class="ui form" id="form">
         <!-- row 1 -->
         <div class="inline fields  ui grid">
           <div class="three wide field ">
             <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
           </div>
-          <div class="four wide field ">
+          <div class="four wide field" [ngClass]="{'error': error}">
             <select name="exciseId " id="exciseId" class="ui dropdown ai search full-width office" (change)="changeExciseId($event)"
               [(ngModel)]="form.exciseId">
               <option value="">กรุณาเลือก</option>
@@ -89,31 +89,16 @@
             </div>
           </div>
         </div>
-        <!-- row 5 -->
-        <div class="inline fields  ui grid">
-          <div class="three wide field ">
-            <label class="text-right full-width">ไฟล์อัปโหลด</label>
-          </div>
-          <div class="four wide field {{loading ? 'loading' : ''}}">
-            <input  class="inputfile" type="file" name="fileName" id="fileName"  (change)="onChangeUpload($event)"  accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-            title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
-          </div>
-          <div class="three wide field ">
-            <button class="ui mini yellow button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
-          </div>
-          <div class="four wide field ">
 
-          </div>
-        </div>
-        
-        <div class="ui stackable center aligned page grid">                
-            <button class="ui mini primary button" type="button" (click)="search()"><i class="file outline icon"></i> แสดงกระดาษทำการ</button>
-            <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
+        <div class="ui stackable center aligned page grid">
+          <button class="ui mini primary button" type="button" (click)="search()"><i class="file outline icon"></i>
+            แสดงกระดาษทำการ</button>
+          <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
         </div><br>
       </form>
     </div>
 
-    <div class="ui segment">
+    <div class="ui segment" id="Dtable">
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
           {{form.entrepreneur}}
@@ -123,26 +108,26 @@
       </div>
       <br>
       <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
-          <thead>
-              <tr>
-                <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
-                <th style="text-align: center !important;" rowspan="2">รายการ</th>
-                <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
-                <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
-                <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
-              </tr>
-              <tr>
-                <th style="text-align: center !important;">จำนวนภาษี</th>
-                <th style="text-align: center !important;">ปริมาณ</th>
-                <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
-                
-                <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
-                <th style="text-align: center !important;">จำนวนภาษี</th>
-                <th style="text-align: center !important;">ปริมาณ</th>
-                <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
-              </tr>
-            </thead>
-            
+        <thead>
+          <tr>
+            <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+            <th style="text-align: center !important;" rowspan="2">รายการ</th>
+            <th style="text-align: center !important;" colspan="3">ขอลดหย่อนภาษีตาม ภส.05-03</th>
+            <th style="text-align: center !important;" colspan="4">ใบเสร็จรับเงิน</th>
+            <th style="text-align: center !important;" rowspan="2">ผลต่าง</th>
+          </tr>
+          <tr>
+            <th style="text-align: center !important;">จำนวนภาษี</th>
+            <th style="text-align: center !important;">ปริมาณ</th>
+            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+
+            <th style="text-align: center !important;">เลขที่ใบเสร็จ</th>
+            <th style="text-align: center !important;">จำนวนภาษี</th>
+            <th style="text-align: center !important;">ปริมาณ</th>
+            <th style="text-align: center !important;">ภาษีต่อหน่วย</th>
+          </tr>
+        </thead>
+
       </table>
       <br>
       <div class="ui center aligned grid">
@@ -151,12 +136,32 @@
             <i class="print icon"></i>
             บันทึกข้อมูล
           </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="arrow left icon"></i>
-            ย้อนกลับ
-          </button>
         </div>
       </div>
+    </div>
+
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+      <span>อัปโหลดไฟล์</span>
+    </div>
+    <div class="ui attached segment {{loading ? 'loading' : ''}}">
+      <form class="ui form" id="upload-form">
+        <!-- row 1 -->
+        <div class="inline fields  ui grid">
+          <div class="three wide field ">
+            <label class="text-right full-width">ไฟล์อัปโหลด</label>
+          </div>
+          <div class="four wide field {{loading ? 'loading' : ''}}">
+            <input class="inputfile" type="file" name="fileName" id="fileName" (change)="onChangeUpload($event)" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+              title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
+          </div>
+          <div class="three wide field ">
+            <button class="ui mini primary button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
+          </div>
+          <div class="four wide field ">
+
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
